test: モックAPI使用メソッドをテストするよう変更